--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,14 +53,13 @@ jobs:
           path: rust/*.node
           if-no-files-found: error
 
-  publish:
-    name: Publish to npm
+  commit-artifacts:
+    name: Commit Built Artifacts
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'release'
     permissions:
-      contents: read
-      id-token: write
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
@@ -69,7 +68,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: npm ci
@@ -91,7 +89,11 @@ jobs:
       - name: Build TypeScript
         run: npm run build:ts
 
-      - name: Publish to npm
-        run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Commit and push artifacts
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add rust/*.node
+          git add -f dist/ || true
+          git commit -m "Build artifacts for release ${{ github.event.release.tag_name }}" || echo "No changes to commit"
+          git push origin HEAD:main
