--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add rust/*.node
+          git add -f rust/*.node
           git add -f dist/ || true
           git commit -m "Build artifacts for release ${{ github.event.release.tag_name }}" || echo "No changes to commit"
           git push origin HEAD:main
